# plastic-bottle-detector

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
src/: extract_feature.py  helpers.py  main.py  setting.json  use.py
src/test/: config.json  config2.json  extract_feature.py  scan.py  setting.json  test_detector.py  train_detector.py
src/test/output/: output
src/utils/: kaggle_helper.py
