[tool.poetry]
name = "image-processing-final"
version = "0.1.0"
description = ""
authors = ["ErEr <jeffliao92316046@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
build = "^1.2.2.post1"
cmake = "^3.31.1"
imutils = "^0.5.4"
opencv-python = "^4.10.0.84"
scikit-image = "^0.24.0"
kagglehub = "^0.3.5"
dlib = {path = "src/dlib/dist/dlib-19.24.99-cp311-cp311-win_amd64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
